trying to get flip cards aligned correctly

--- a/trekup/public/stylesheets/index_style.css
+++ b/trekup/public/stylesheets/index_style.css
@@ -1,164 +1,31 @@
-/* default
+/* index_style
  * @author Brynn Harrington
  * style sheet for the homepage 
  */
 
-
-/********************************************************
- * Higher-Level Styling 
- ********************************************************/
-/* styling for all */
-* {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.25vw;
-}
-
-/* overall html and body styling */
-html,
-body {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    font-size: 100%;
-    width: 100%;
-    height: 100%;
-    background: transparent;
-}
-
-/* link styling */
-a {
-    text-decoration: none;
-    color: black;
-}
-
-/********************************************************
- * Top of Page Styling 
- ********************************************************/
-/* header */
-.header-div {
-    width: 100%;
-    /* border-style: dashed; */
-    display: flex;
-    position: fixed;
-    z-index: 5;
-    background-color: #648B7F;
-}
-
-/* title */
-.title-div {
-    width: 25%;
-    display: inline-block;
-}
-
-.title {
-    font-size: 3vw;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: bold;
-    /*line-height: 2vw;*/
-    /* padding-left: 2.5%; */
-    top: -15%;
-    position: absolute;
-}
-
-.title:hover {
-    cursor: pointer;
-    background-color: #87a49b;
-}
-
-/* top bar divider */
-.topBar {
-    width: 50%;
-    display: inline-block;
-    text-align: center;
-    margin-top: 2%;
-}
-
-/* hamburger menu styling
- source: https://stackoverflow.com/questions/44207293/adding-a-drop-down-menu-to-three-line-menu-icon */
-.menu-div {
-    width: 25%;
-    display: inline-block;
-    text-align: right;
-    margin-top: 1%;
-}
-
-.menu {
-    display: inline-block;
-    cursor: pointer;
-    margin-right: 10%;
-}
-
-.top-bar,
-.middle-bar,
-.bottom-bar {
-    width: 3vw;
-    height: 0.5vw;
-    background-color: black;
-    margin: 0.5vw 0;
-    transition: 0.4s;
-}
-
-/* rotate first bar */
-.change,
-.top-bar {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-/* fade out the second bar */
-.change,
-.middle-bar {
-    opacity: 0;
-}
-
-/*rotate last bar */
-.change,
-.bottom-bar {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
-}
-
-/* .dropdown-content {
-    display: none;
-} */
-
-#account {
-    text-align: center;
-    border-style: ridge;
-    background-color: white;
-}
-
-#about {
-    text-align: center;
-    border-style: ridge;
-    background-color: white;
-}
-
-#help {
-    text-align: center;
-    border-style: ridge;
-    background-color: white;
-}
-
-/********************************************************
- * Middle of Page Styling 
- ********************************************************/
- /* style for scaling / viewing */
- /* .page-div,
+/* style for scaling / viewing */
+.page-div,
 .compass-table,
 .compass-table-row,
-.compass-table-col {
+.compass-table-col,
+.flip-card,
+.flip-card-front,
+.flip-card-back,
+.flip-card-inner,
+.flip-card-search {
     display: flex;
-    position: fixed;
+    position: relative;
     margin: auto;
     height: 65%;
     width: 100%;
     z-index: 5;
-} */
+}
 
 /* page divider */
 .page-div {
+    display: flex;
+    position: relative;
+    margin: auto;
     padding-top: 5%;
     padding-bottom: 5%;
     background-image: url('../images/compass.png');
@@ -170,7 +37,237 @@ a {
     z-index: 5;
 }
 
-/* lists */
-li {
-    display: inline;
+/* tables */
+/* td {
+    color: #588c7e;
+    font-weight: bold;
+    font-size: 300%;
+} */
+
+/* compass table style */
+/* .compass-table {
+    width: 100%;
+    height: 100%;
 }
+
+.compass-table-row {
+    width: 100%;
+    height: 33%;
+}
+
+.compass-table-col {
+    width: 50%;
+    height: 100%;
+} */
+
+/* flip card style 
+ * source: https://www.w3schools.com/howto/howto_css_flip_card.asp */
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+    background-color: #588c7e;
+    color: white;
+}
+
+/* Style the back side */
+.flip-card-back {
+    background-color: #588c7e;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+/* .flip-text {
+    font-size: 30%;
+} */
+
+
+/* .flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: #588c7e;
+    color: white;
+}
+
+.flip-card-back {
+    background-color: #588c7e;
+    color: white;
+    transform: rotateY(180deg);
+} */
+
+
+/* top card */
+
+/* .flip-card {
+    background-color: transparent;
+    width:150px;
+    height:150px;
+    width: 30%;
+    height: 100%;
+    perspective:1000px;
+}
+
+.flip-card-search {
+    background-color: transparent;
+    width: 150px;
+    height: 150px;
+    perspective: 1000px;
+} */
+
+/* .searchHikes td {
+    padding: 17px;
+} */
+/* 
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover,
+.flip-card-inner {
+    transform: rotateY(180deg);
+    cursor: pointer;
+}
+
+.flip-card-search:hover,
+.flip-card-inner {
+    transform: rotateY(180deg);
+    cursor: pointer;
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: black;
+    color: black;
+}
+
+.flip-card-back {
+    background-color: #588c7e;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.flip-text {
+    font-size: 30%;
+}
+
+#flip-top {
+    width: 100%;
+    height: 100%;
+}
+
+#flip1outer {
+    width: 30%;
+    height: 70%;
+    margin-bottom: 40%;
+    margin-left: 84%;
+} */
+/* 
+#flip2 {
+    width: 100%;
+    height: 100%;
+}
+
+#flip2outer {
+    width: 30%;
+    height: 85%;
+    margin-bottom: 33%;
+    margin-left: 45%;
+} */
+
+/* #flip3 {
+    width: 100%;
+    height: 100%;
+}
+
+#flip3outer {
+    width: 30%;
+    height: 85%;
+    margin-bottom: 33%;
+    margin-left: 25%;
+} */
+/* 
+#flip4 {
+    width: 100%;
+    height: 100%;
+}
+
+#flip4outer {
+    width: 30%;
+    height: 85%;
+    margin-bottom: 25%;
+    margin-top: 6%;
+    margin-left: 85%;
+} */
