--- a/trekup/public/stylesheets/login_page_style.css
+++ b/trekup/public/stylesheets/login_page_style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-  	background-image:linear-gradient(to bottom, #648B7F, #648B7F);
+  	background-image:linear-gradient(to bottom, #588c7e, #588c7e);
 }
 
 h1 {
