--- a/trekup/public/stylesheets/nav_bar_style.css
+++ b/trekup/public/stylesheets/nav_bar_style.css
@@ -70,11 +70,11 @@ li {
 }
 
 #profPic:hover {
-    background-color: #648B7F;
+    background-color: #588c7e;
     cursor: pointer;
 }
 
 #mastHead:hover {
-    background-color: #648B7F;
+    background-color: #588c7e;
     cursor: pointer;
 }
